# pynnotate

./: Annopython.py  LICENSE  Pynnotate_v9f.py  README.md  README.pt-BR.md  README_Pynnotate.md  README_ptBR.md  download_genes.py  list.txt  main_graphic.py  main_terminal.py  mapaminonuc.py  pyproject.toml  requirements.txt  setup.py  test.py
Pynnotate_Pos-Processamento/: Pynnotate_pos_processamento.py  README_pos_processamento.txt
Pynnotate_Pos-Processamento/dados_amphibia/Amphibia_genes/: 12S.fasta  16S.fasta  ATP6.fasta  ATP8.fasta  COI.fasta  COII.fasta  COIII.fasta  CYTB.fasta  ND1.fasta  ND2.fasta  ND3.fasta  ND4.fasta  ND4L.fasta  ND5.fasta  ND6.fasta  aliases_desconhecidos.txt  aliases_duplicados.txt  log_genes.txt  tRNA-Ala.fasta  tRNA-Arg.fasta  tRNA-Asn.fasta  tRNA-Asp.fasta  tRNA-Cys.fasta  tRNA-Gln.fasta  tRNA-Glu.fasta  tRNA-Gly.fasta  tRNA-His.fasta  tRNA-Ile.fasta  tRNA-Leu1.fasta  tRNA-Leu2.fasta  tRNA-Lys.fasta  tRNA-Met.fasta  tRNA-Phe.fasta  tRNA-Pro.fasta  tRNA-Ser1.fasta  tRNA-Ser2.fasta  tRNA-Thr.fasta  tRNA-Trp.fasta  tRNA-Tyr.fasta  tRNA-Val.fasta
Pynnotate_Pos-Processamento/dados_amphibia/Outgroups_genes/: 12S.fasta  16S.fasta  ATP6.fasta  ATP8.fasta  COI.fasta  COII.fasta  COIII.fasta  CYTB.fasta  ND1.fasta  ND2.fasta  ND3.fasta  ND4.fasta  ND4L.fasta  ND5.fasta  (+22 more)
annopython/: main.py
examples/: config.yaml  features.csv  repeated.csv  synonyms.csv
graphic/: utils.py
main/: alias_maps.py  pynnotate.py
pynnotate/: dict.py  main.py  pynnotate.py  pynnotate_graphic.py  utils.py
pynnotate/main/: main.py
pynnotate/terminal/: utils.py
