[project]
name = "pynnotate"
version = "1.0"
description = "Pynnotate is a tool for searching, downloading, and automatically annotating genetic sequences from GenBank"
authors = [
    { name="Fernanda S. Caron", email="fernandadesouzacaron@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "biopython",
    "openpyxl",
    "tqdm",
    "pyyaml"
]

[project.scripts]
pynnotate = "pynnotate.pynnotate:main"
